name:                pandoc-filters
version:             0.1.0.0
synopsis:            Filters to enhance pandoc academic writing
-- description:         
homepage:            https://github.com/balachia/pandoc-filters
license:             GPL-3
license-file:        LICENSE
author:              Tony Vashevko
maintainer:          avashevko@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable pandoc-internalref
  main-is:             pandoc-internalref.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7, pandoc, pandoc-types
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable pandoc-dropinenv
  main-is:             pandoc-dropinenv.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7, pandoc, pandoc-types
  -- hs-source-dirs:      
  default-language:    Haskell2010
